tests/errors/type_check/rvalue_typing/rvalue_enum_constr_unknown_enum.sim

        fn f() {
            entry:
            return
        }
        enum Option: Copy + Drop { None: unit Some: i64 }
        struct S { x: i64 }
        fn g() {
            o: Option;
            entry:
            o = Nope::Some(42);
            return
        }
        