tests/errors/type_check/rvalue_typing/rvalue_enum_constr_unknown_enum.err.expected
error: at 11:13: [TC-EnumConstrOnNonEnum] In function 'g', block 'entry': Undeclared enum 'Nope'
    |
 11 |             o = Nope::Some(42);
    |             ^^^^^^^^^^^^^^^^^^
